--- a/SitoWeb/index.html
+++ b/SitoWeb/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="shortcut icon" href="assets/logo.jpg">
   </head>
   <body>
     <header>
@@ -52,7 +53,7 @@
         <p>Link alla repository del progetto su Github</p>
         <ul class="socials">
           <li>
-            <a href="https://github.com/MattiaDippolito/Progetto.github.io">
+            <a href="https://github.com/MattiaDippolito/ProgettoTecnologie">
               <img
                 src="../assets/github.png"
                 alt="github"
